[package]
name = "brute_force"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Universal brute force tool with GPU acceleration"
license = "MIT"

[dependencies]
rayon = "1.7"
indicatif = "0.17"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12"
ocl = { version = "0.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.13", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
